page covers done. refresh header issue addressed but in dark mode when clicking menu white comes & goes

--- a/pages/styles.module.css
+++ b/pages/styles.module.css
@@ -62,7 +62,7 @@
   width: 100%;
   height: 80px;
   z-index: 100; /* Adjust the z-index as needed */
-  background-color: var(--header-background, white); /* Set the background color as needed */
+  background-color: var(--header-background, black); /*Set the background color as needed */
   padding: 1px;
   box-shadow: 0px 12px 5px rgba(0, 0, 0, 0.1);
   transition: background-color 0.3s ease; /* Add a smooth transition effect */
